# yakrover-marketplace

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GETTING_STARTED.md  README.md  eas_attestation_log.json  fleet_funding_log.json  fleet_manifest.yaml  fleet_registration_log.json  fly.toml  mcp_server.py  pyproject.toml  serve_with_auction.py
.claude-plugin/: plugin.json
.claude/skills/rfp-to-robot-spec/: SKILL.md
.github/workflows/: deploy-fly.yml  notify.yml  test.yml
.notifications/: latest.json
auction/: __init__.py  agreement.py  api.py  bond_verifier.py  compliance.py  contracts.py  core.py  deliverable_qa.py  delivery_schemas.py  demo.py  discovery_bridge.py  engine.py  events.py  mcp_robot_adapter.py  mcp_tools.py  mock_fleet.py  operator_registry.py  reputation.py  rfp_processor.py  sensor_registry.py  settlement.py  store.py  stripe_service.py  terms_comparator.py  wallet.py
auction/tests/: test_construction_tasks.py  test_core.py  test_deliverable_qa.py  test_delivery_schemas_e2e.py  test_discovery_bridge.py  test_ed25519.py  test_engine.py  test_events.py  test_fakerover_bid.py  test_integration_v10.py  test_operator_registry.py  test_reputation.py  test_store.py  test_stripe_service.py  test_wallet.py
auction/tests/integration/: test_e2e_real_fleet.py  test_stripe_live.py
auction/tests/scenarios/: README.md
chatbot/: package-lock.json  package.json
chatbot/src/: index.js
data/: fleet_manifest.yaml
demo/: index.html
demo/explorer/: index.html  product.yaml
demo/landing/: index.html
demo/marketplace/: index.html
deploy/: README.md
docs/: AGENT_SESSION_FEEDBACK_2026-03-25.md  AGENT_SESSION_FEEDBACK_2026-03-25T1758Z.md  AGENT_SESSION_FEEDBACK_2026-03-25T1811Z.md  ASSESSMENT_TECHNICAL_STACK.md  BACKLOG.md  CRITIQUE_OPERATOR_REGISTRATION_AND_DEMO.md  DECISIONS.md  DEVELOPMENT_STRATEGY.md  DIAGRAM_SYSTEM.md  DIAGRAM_USER_JOURNEY.md  FEATURE_REQUIREMENTS_v15.md  FRONTEND_DESIGN_SPRINT.md  PLAN_100_ROBOT_FLEET.md  PLAN_OPERATOR_REGISTRATION.md  PRODUCT_MODULE_MAP.md  REPORT-STYLE.md  ROADMAP.md  ROADMAP_v4.md  SCOPE.md  SLUG_REGISTRY.yaml  USER_JOURNEY.md  USER_JOURNEY_CONSTRUCTION_v01.md
docs/_archive/: FRONTEND_DESIGN_SPRINT.md  ROADMAP_v2.md  ROADMAP_v3.md  USER_JOURNEY_LUNAR_v01.md  USER_JOURNEY_MARKETPLACE_v01.md  USER_JOURNEY_PRIVATE_v01.md  USER_PROFILES.md
docs/architecture/: ASSESSMENT_AGENT_LINK_FLOW.md  ASSESSMENT_PROTOCOL_SEPARATION.md  DIAGRAM_SYSTEM.md  MCP_TOOLS_SIMPLIFICATION_ASSESSMENT.md  PLAN_ACH_AND_PAYMENT_TRANSLATION.md  PLAN_DEMO_TESTING_CHECKLIST.md  PLAN_GASLESS_USDC_PAYMENT.md  PLAN_OPERATOR_REGISTRATION.md  PLAN_PAYMENT_SETTLEMENT_DEMO.md  PLAN_PAYMENT_SETTLEMENT_DEMO_v3.md  PLAN_PAYMENT_SETTLEMENT_DEMO_v4.md  PLAN_REAL_ROBOT_INTEGRATION.md  PLAN_REMOVE_PLATFORM_FEE.md  PLAN_RFP_DEMO_FLOW.md  PLAN_ROBOT_USER_JOURNEY.md  PLAN_SCHEMA_DRIVEN_QA.md  PRODUCT_MODULE_MAP.md  TECHNICAL_MCP_DEPLOYMENT.md
docs/archive/: serve_with_auction.py  wrangler-robot-marketplace-static.jsonc
docs/archive/demo_archive/: index-v5.html  sample-rfp-mdot-us131.txt
docs/archive/mcp_demo_4/: index.html
docs/archive/mcp_demo_v1/: index.html
docs/archive/mcp_demo_v3/: index.html
docs/archive/review/: REVIEW_PLAN.md  REVIEW_SYNTHESIS.md
docs/archive/yaml-competition/: COMPETITION_1_STRATEGY.md  COMPETITION_2_TECHNICAL.md  COMPETITION_3_UX.md  COMPETITION_4_LEGAL.md  COMPETITION_5_ONTOLOGY.md  DEBATE_SCHEMA_ENGINEER.md  DEBATE_SCHEMA_STRATEGIST.md  JUDGE_1_RANKING.md  JUDGE_2_RANKING.md  PLAN_YAML_DSL_SYNTHESIS.md
docs/feedback/: CRITIQUE_FRONTEND_ENG.md  CRITIQUE_PRODUCT.md  CRITIQUE_UX_DESIGN.md  FEEDBACK_WAVE1_STRUCTURE.md
docs/guides/: OPERATIONS.md
docs/mcp_demo/: index.html
docs/mcp_demo_2/: index.html
docs/mcp_demo_3/: index.html
docs/mcp_demo_4/: index.html
docs/mcp_demo_5/: index.html  journey.yaml
docs/memo/: STYLE_GUIDE.md  index.html
docs/memo-space/: index.html
docs/onboarding/: ROBOT_ACTIVATION_SUMMARY.md  ROBOT_OPERATOR_ONBOARDING.md
docs/pitch/: index.html  technical-pitch-dsl.yaml
docs/research/: ANALYSIS_YAML_REFERENCE_THEJAYMO.md  ASSESSMENT_8004_PR5_BIDDING_PLAN.md  DUE_DILIGENCE_FACT_CHECK.md  FINANCIAL_ANALYSIS_RAISE.md  IMPROVEMENT_BACKLOG.yaml  PLAN_ACH_AND_PAYMENT_TRANSLATION.md  PLAN_COMMIT_ON_HIRE_PAYMENT.md  PLAN_PAYMENT_SETTLEMENT_DEMO.md  PLAN_PAYMENT_SETTLEMENT_DEMO_v2.md  PLAN_PAYMENT_SETTLEMENT_DEMO_v4.md  PLAN_REMOVE_PLATFORM_FEE.md  PLAN_STABLE_INFRASTRUCTURE.md  PRODUCT_DSL.yaml  PRODUCT_DSL_v2.yaml  README.md  RESEARCH_BUY_A_ROBOT_STORY.md  RESEARCH_PAYMENT_BOND_VERIFICATION.md  RESEARCH_REAL_SURVEY_EQUIPMENT.md  RESEARCH_ROADMAP.yaml  RESEARCH_TERMINOLOGY_ROBOT_VS_INDUSTRY.md  SKILL_ARCHITECTURE_PLAN.md  SKILL_ARCHITECTURE_PLAN_v2.md
docs/research/automated/: R-006_pls_board_apis.md  R-007_electronic_survey_seal_stamp_regulations.md  R-007b_nc_drone_mapping_ruling_operator_liability.md  R-008_acord25_coi_pdf_extraction.md  R-010_survey_deliverable_qa_checklists_dot.md  R-027_operator_identity_verification.md  R-028_stripe_connect_kyc_operator_verification.md  R-040_payram_production_reliability_audit.md  R-042_ach_payment_fraud_risk_controls.md  R-045_surveying_board_platform_intermediary_liability.md  R-051_imr_llm_multi_robot_task_planning.md  (+4 more)
docs/review/: REVIEW_PLAN.md  REVIEW_SYNTHESIS.md
docs/site/: index.html  product.yaml
docs/wave1/: GC_ENGAGEMENT_PACKAGE.md  OPERATOR_ENGAGEMENT_PACKAGE.md  TECHNICAL_MCP_DEPLOYMENT.md
fly-fleet/: Dockerfile  fly.toml
fly-fleet-sim/: server.py
fly-fleet-sim/aerial-photo/: category_server.py
fly-fleet-sim/skydio/: fly.toml
infra/: WORKER_DEPLOY.md  marketplace-start.sh
infra/deploy/: README.md  tunnel.sh
infra/fleet/: Dockerfile  fly.toml  start.sh
infra/fleet-sim/: Dockerfile  category_server.py  deploy-category.sh  fly.toml
research/: RESEARCH_SYNTHESIS.md
scripts/: deploy-all.sh  deploy-demo.sh  deploy-site.sh  deploy-worker.sh  eas_attest.py  pull-feedback.sh  register_fleet.py
worker/: package.json  wrangler.toml
worker/src/: index.js
(+31 files in other folders)
