[project]
name = "robot-marketplace"
version = "1.0.0"
description = "Robot task auction marketplace — AI agents post tasks, physical robots bid, winners are paid via Stripe or crypto"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"

dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
stripe = ["stripe>=10.0"]
persistence = ["aiosqlite>=0.20"]
ed25519 = ["eth-account>=0.13"]
mcp = ["fastmcp>=2.14"]
all = [
    "stripe>=10.0",
    "aiosqlite>=0.20",
    "eth-account>=0.13",
    "fastmcp>=2.14",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "hypothesis>=6.0",
]

[project.urls]
Repository = "https://github.com/YakRoboticsGarage/robot-marketplace"
Protocol = "https://github.com/YakRoboticsGarage/yakrover-protocols/tree/main/marketplace"
"Robot Framework" = "https://github.com/YakRoboticsGarage/yakrover-8004-mcp"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "stripe: requires STRIPE_SECRET_KEY for live Stripe test API calls",
]

[tool.uv]
prerelease = "allow"
