[project]
name = "yakrover-marketplace"
version = "1.0.0"
description = "Robot task auction marketplace — AI agents post tasks, physical robots bid, winners are paid via Stripe or crypto"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"

dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
stripe = ["stripe>=10.0"]
persistence = ["aiosqlite>=0.20"]
ed25519 = ["eth-account>=0.13"]
mcp = ["fastmcp>=2.14"]
all = [
    "stripe>=10.0",
    "aiosqlite>=0.20",
    "eth-account>=0.13",
    "fastmcp>=2.14",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.urls]
Repository = "https://github.com/YakRoboticsGarage/yakrover-marketplace"
Protocol = "https://github.com/YakRoboticsGarage/yakrover-protocols/tree/main/marketplace"
"Robot Framework" = "https://github.com/YakRoboticsGarage/yakrover-8004-mcp"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "stripe: requires STRIPE_SECRET_KEY for live Stripe test API calls",
    "blockchain: requires BASE_SEPOLIA_RPC_URL for on-chain tests",
    "fleet: requires running fleet server for robot integration tests",
]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "S",          # bandit (security)
    "B",          # bugbear
    "C4",         # comprehensions
    "UP",         # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"auction/tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["stripe.*", "fastmcp.*", "eth_account.*", "aiosqlite.*"]
ignore_missing_imports = true

[tool.uv]
prerelease = "allow"
